Pin uv for pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,21 +40,21 @@ repos:
         language: python
         pass_filenames: false
         types_or: [yaml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: docformatter
         name: docformatter
         entry: uv run --extra=dev -m docformatter --in-place
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shellcheck
         name: shellcheck
         entry: uv run --extra=dev shellcheck --shell=bash
         language: python
         types_or: [shell]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shellcheck-docs
         name: shellcheck-docs
@@ -62,14 +62,14 @@ repos:
           --shell=bash"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shfmt
         name: shfmt
         entry: shfmt --write --space-redirects --indent=4
         language: python
         types_or: [shell]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shfmt-docs
         name: shfmt-docs
@@ -77,7 +77,7 @@ repos:
           --no-pad-file --command="shfmt --write --space-redirects --indent=4"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: mypy
         name: mypy
@@ -86,7 +86,7 @@ repos:
         language: python
         types_or: [python, toml]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: mypy-docs
         name: mypy-docs
@@ -101,7 +101,7 @@ repos:
         entry: uv run --extra=dev -m check_manifest
         language: python
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyright
         name: pyright
@@ -110,7 +110,7 @@ repos:
         language: python
         types_or: [python, toml]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyright-docs
         name: pyright-docs
@@ -125,14 +125,14 @@ repos:
         language: python
         types_or: [python]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: vulture-docs
         name: vulture docs
         entry: uv run --extra=dev doccmd --language=python --command="vulture"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyroma
         name: pyroma
@@ -140,14 +140,14 @@ repos:
         language: python
         pass_filenames: false
         types_or: [toml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: deptry
         name: deptry
         entry: uv run --extra=dev -m deptry src/
         language: python
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pylint
         name: pylint
@@ -155,28 +155,28 @@ repos:
         language: python
         stages: [manual]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-check-fix
         name: Ruff check fix
         entry: uv run --extra=dev -m ruff check --fix
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-check-fix-docs
         name: Ruff check fix docs
         entry: uv run --extra=dev doccmd --language=python --command="ruff check --fix"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-format-fix
         name: Ruff format
         entry: uv run --extra=dev -m ruff format
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
@@ -184,28 +184,28 @@ repos:
           format"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: doc8
         name: doc8
         entry: uv run --extra=dev -m doc8
         language: python
         types_or: [rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: interrogate
         name: interrogate
         entry: uv run --extra=dev -m interrogate
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: interrogate-docs
         name: interrogate docs
         entry: uv run --extra=dev doccmd --language=python --command="interrogate"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyproject-fmt-fix
         name: pyproject-fmt
@@ -219,7 +219,7 @@ repos:
         entry: uv run --extra=dev yamlfix
         language: python
         types_or: [yaml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
 # We use system Python, with required dependencies specified in pyproject.toml.
 # We therefore cannot use those dependencies in pre-commit CI.
