--- a/pyproject.toml
+++ b/pyproject.toml
@@ -303,6 +303,7 @@ exclude_also = [
 strict = true
 files = [ "." ]
 exclude = [ "build" ]
+follow_untyped_imports = true
 
 [tool.pyright]
 enableTypeIgnoreComments = false
