Use keyword arguments everywhere

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ optional-dependencies.dev = [
     "docformatter==1.7.5",
     "interrogate==1.7.0",
     "mypy[faster-cache]==1.14.0",
+    "mypy-strict-kwargs==2024.12.25",
     "myst-parser==4.0.0",
     "pre-commit==4.0.1",
     "pyenchant==3.3.0rc1",
@@ -304,6 +305,9 @@ strict = true
 files = [ "." ]
 exclude = [ "build" ]
 follow_untyped_imports = true
+plugins = [
+    "mypy_strict_kwargs",
+]
 
 [tool.pyright]
 enableTypeIgnoreComments = false
