--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -122,6 +122,8 @@ repos:
       - id: pyright-verifytypes
         name: pyright-verifytypes
         stages: [pre-push]
+        # Use `--ignoreexternal` because we expose parts of the Sphinx API and Sphinx is not
+        # thoroughly typed enough.
         entry: uv run --extra=dev -m pyright --ignoreexternal --verifytypes sphinx_substitution_extensions
         language: python
         pass_filenames: false
