--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ optional-dependencies.dev = [
     "shfmt-py==3.7.0.1",
     # We use `sphinx.testing`.
     "sphinx[test]==8.1.3",
+    "sphinx-toolbox==3.8.1",
     "types-docutils==0.21.0.20241128",
     "vulture==2.14",
     "yamlfix==1.17.0",
