--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -269,7 +269,7 @@ repos:
       - id: sphinx-lint
         name: sphinx-lint
         entry: uv run --extra=dev sphinx-lint --enable=all --disable=line-too-long
-          *.rst
+          README.rst CHANGELOG.rst
         language: python
         types_or: [rst]
         additional_dependencies: [uv==0.5.14]
