Run pre-commit hooks on only one stage each

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,31 +41,49 @@ repos:
   - repo: meta
     hooks:
       - id: check-useless-excludes
+        stages: [pre-commit]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
       - id: check-added-large-files
+        stages: [pre-commit]
       - id: check-case-conflict
+        stages: [pre-commit]
       - id: check-executables-have-shebangs
+        stages: [pre-commit]
       - id: check-merge-conflict
+        stages: [pre-commit]
       - id: check-shebang-scripts-are-executable
+        stages: [pre-commit]
       - id: check-symlinks
+        stages: [pre-commit]
       - id: check-json
+        stages: [pre-commit]
       - id: check-toml
+        stages: [pre-commit]
       - id: check-vcs-permalinks
+        stages: [pre-commit]
       - id: check-yaml
+        stages: [pre-commit]
       - id: end-of-file-fixer
+        stages: [pre-commit]
       - id: file-contents-sorter
         files: spelling_private_dict\.txt$
+        stages: [pre-commit]
       - id: trailing-whitespace
+        stages: [pre-commit]
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
       - id: rst-directive-colons
+        stages: [pre-commit]
       - id: rst-inline-touching-normal
+        stages: [pre-commit]
       - id: text-unicode-replacement-char
+        stages: [pre-commit]
       - id: rst-backticks
 
+        stages: [pre-commit]
   - repo: local
     hooks:
       - id: actionlint
@@ -75,6 +93,7 @@ repos:
         pass_filenames: false
         types_or: [yaml]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: docformatter
         name: docformatter
@@ -82,6 +101,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shellcheck
         name: shellcheck
@@ -89,6 +109,7 @@ repos:
         language: python
         types_or: [shell]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shellcheck-docs
         name: shellcheck-docs
@@ -97,6 +118,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shfmt
         name: shfmt
@@ -104,6 +126,7 @@ repos:
         language: python
         types_or: [shell]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shfmt-docs
         name: shfmt-docs
@@ -112,6 +135,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: mypy
         name: mypy
@@ -171,6 +195,7 @@ repos:
         types_or: [python]
         pass_filenames: false
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: vulture-docs
         name: vulture docs
@@ -178,6 +203,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: pyroma
         name: pyroma
@@ -186,6 +212,7 @@ repos:
         pass_filenames: false
         types_or: [toml]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: deptry
         name: deptry
@@ -193,6 +220,7 @@ repos:
         language: python
         pass_filenames: false
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: pylint
         name: pylint
@@ -208,6 +236,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: ruff-check-fix-docs
         name: Ruff check fix docs
@@ -215,6 +244,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: ruff-format-fix
         name: Ruff format
@@ -222,6 +252,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
@@ -230,6 +261,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: doc8
         name: doc8
@@ -237,6 +269,7 @@ repos:
         language: python
         types_or: [rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: interrogate
         name: interrogate
@@ -244,6 +277,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: interrogate-docs
         name: interrogate docs
@@ -251,6 +285,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: pyproject-fmt-fix
         name: pyproject-fmt
@@ -259,12 +294,14 @@ repos:
         types_or: [toml]
         files: pyproject.toml
 
+        stages: [pre-commit]
       - id: yamlfix
         name: yamlfix
         entry: uv run --extra=dev yamlfix
         language: python
         types_or: [yaml]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: sphinx-lint
         name: sphinx-lint
@@ -272,3 +309,4 @@ repos:
         language: python
         types_or: [rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
