--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ optional-dependencies.dev = [
     "mypy-strict-kwargs==2025.4.3",
     "pre-commit==4.3.0",
     "pyenchant==3.3.0rc1",
-    "pylint==3.3.8",
+    "pylint[spelling]==3.3.8",
     "pyproject-fmt==2.6.0",
     "pyright==1.1.405",
     "pyroma==5.0",
