--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 ---
-
 name: CI
 
 on:
@@ -14,10 +13,9 @@ on:
 
 jobs:
   build:
-
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13']
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
         uv-resolution: [highest, lowest-direct]
         platform: [ubuntu-latest, windows-latest]
 
@@ -30,7 +28,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-          cache-dependency-glob: '**/pyproject.toml'
+          cache-dependency-glob: "**/pyproject.toml"
 
       - name: Lint
         run: |
@@ -47,14 +45,14 @@ jobs:
 
       - name: Build sample
         run: |
-          make build-sample
+          uv run --extra=dev sphinx-build -W -b html sample/source sample/build
         env:
           UV_PYTHON: ${{ matrix.python-version }}
           UV_RESOLUTION: ${{ matrix.uv-resolution }}
 
       - name: Build sample parallel
         run: |
-          make build-sample-parallel
+          uv run --extra=dev sphinx-build -j 2 -W -b html sample/source sample/build
         env:
           UV_PYTHON: ${{ matrix.python-version }}
           UV_RESOLUTION: ${{ matrix.uv-resolution }}
@@ -72,7 +70,7 @@ jobs:
   completion-ci:
     needs: build
     runs-on: ubuntu-latest
-    if: always()  # Run even if one matrix job fails
+    if: always() # Run even if one matrix job fails
     steps:
       - name: Check matrix job status
         run: |-
