Apply default substitutions to literalinclude and document feature
- Extend substitutions_default_enabled to literalinclude directive
- Add :nocontent-substitutions: and :nopath-substitutions: flags
- Add 4 comprehensive tests for literalinclude default behavior
- Document the feature in README with examples
- Update CHANGELOG with complete feature description
- Add substitutions_default_enabled to vulture ignore list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -363,6 +363,7 @@ ignore_names = [
     "setup",
     "source_suffix",
     "spelling_word_list_filename",
+    "substitutions_default_enabled",
     "templates_path",
     "warning_is_error",
 ]
