Add zizmor for GitHub Actions security linting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,6 +34,7 @@ ci:
     - vulture
     - vulture-docs
     - yamlfix
+    - zizmor
     - pyrefly
     - pyrefly-docs
 
@@ -325,6 +326,15 @@ repos:
         name: yamlfix
         entry: uv run --extra=dev yamlfix
         language: python
+        types_or: [yaml]
+        additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
+
+      - id: zizmor
+        name: zizmor
+        entry: uv run --extra=dev zizmor .github
+        language: python
+        pass_filenames: false
         types_or: [yaml]
         additional_dependencies: [uv==0.9.5]
         stages: [pre-commit]
