Omit UV_RESOLUTION in Lint step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,12 +36,14 @@ jobs:
 
       - name: Lint
         run: |
+          # pre-commit is the only hook stage
           uv run --extra=dev prek run --all-files --hook-stage pre-commit --verbose
-          uv run --extra=dev prek run --all-files --hook-stage pre-push --verbose
-          uv run --extra=dev prek run --all-files --hook-stage manual --verbose
         env:
           UV_PYTHON: ${{ matrix.python-version }}
-          UV_RESOLUTION: ${{ matrix.uv-resolution }}
+          # UV_RESOLUTION is intentionally not set here. prek uses uv to
+          # install hooks, and uv inherits UV_RESOLUTION. With lowest-direct,
+          # this causes hook dependencies to resolve to ancient versions that
+          # don't build on modern Python.
 
       - name: Freeze for debugging
         run: |
@@ -74,7 +76,7 @@ jobs:
   completion-ci:
     needs: build
     runs-on: ubuntu-latest
-    if: always()  # Run even if one matrix job fails
+    if: always() # Run even if one matrix job fails
     steps:
       - name: Check matrix job status
         run: |-
