Replace docformatter with pydocstringformatter
- Replace docformatter==1.7.7 with pydocstringformatter==0.7.3
- Replace [tool.docformatter] with [tool.pydocstringformatter] config
- Update ruff ignore comments (D200 -> D205/D212)
- Don't use linewrap-full-docstring to avoid breaking URLs
  (https://github.com/DanielNoord/pydocstringformatter/issues/540)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ ci:
     - ruff-check-fix-docs
     - ruff-format-fix
     - ruff-format-fix-docs
-    - docformatter
+    - pydocstringformatter
     - shellcheck
     - shellcheck-docs
     - shfmt
@@ -100,9 +100,9 @@ repos:
         additional_dependencies: [uv==0.9.5]
         stages: [pre-commit]
 
-      - id: docformatter
-        name: docformatter
-        entry: uv run --extra=dev -m docformatter --in-place
+      - id: pydocstringformatter
+        name: pydocstringformatter
+        entry: uv run --extra=dev pydocstringformatter
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.9.5]
