Add ty error-on-warning and disable type: ignore support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -317,6 +317,12 @@ enableTypeIgnoreComments = false
 reportUnnecessaryTypeIgnoreComment = true
 typeCheckingMode = "strict"
 
+[tool.ty.analysis]
+respect-type-ignore-comments = false
+
+[tool.ty.terminal]
+error-on-warning = true
+
 [tool.pydocstringformatter]
 write = true
 split-summary-body = false
