--- a/pyproject.toml
+++ b/pyproject.toml
@@ -269,6 +269,7 @@ run.branch = true
 report.exclude_also = [
     "if TYPE_CHECKING:",
 ]
+report.show_missing = true
 
 [tool.mypy]
 strict = true
